package com.edu.utp.corrientazo.modelo;

public class OpcionSopa {
    String nombre;

    public OpcionSopa(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }


    
}
