@startuml "Diagrama Relacional"

Entity Mesa{
    integer: id >PK<
    --
    numero: varchar(10) <<NL>> <<UQ>>
    
}

Entity Pedido{
    id:integer <<PK>>
    --
    cliente:varchar(100) 
    --
    estado:varchar(100)
    --
    id_mesa:integer <<FK>>
    --
    id_adicional <<FK>> 
}

Entity Adicional{
    id:integer <<PK>>
    --
    nombre:varchar(100)
    precio:integer 
}

Entity PedidoAdicional{
    id_pedido:integer <<PK>> <<FK>>
    id_adicional:integer <<PK>> <<FK>>
}

Entity Corrientazo{
    id_pedido:integer <<PK>> <<FK>>
    --
    precio:integer <<NN>>
    id_Carne:integer <<FK>>
    id_Sopa:integer <<FK>>
    id_Principio:integer <<FK>>
    id_Ensalada:integer <<FK>>
    id_Jugo:integer <<FK>>
    
}

Entity OpcionSopa {
    id:integer <<PK>>
    --
    nombre:varchar(100) <<NN>>
}

Entity OpcionPrincipio {
    id:integer <<PK>>
    --
     nombre:varchar(100) <<NN>>
}
Entity OpcionJugo {
    id:integer <<PK>>
    --
     nombre:varchar(100) <<NN>>
}
Entity OpcionEnsalada {
    id:integer <<PK>>
    --
     nombre:varchar(100) <<NN>>
}


Entity OpcionCarne {
    id:integer <<PK>>
    --
     nombre:varchar(100) <<NN>>
}

Mesa ||--o{ Pedido
Pedido ||--|{PedidoAdicional
Adicional ||--|{PedidoAdicional 
Corrientazo }|--||Pedido
Corrientazo }|--|| OpcionCarne
Corrientazo }|--o| OpcionEnsalada
Corrientazo }|--|| OpcionJugo
Corrientazo }|--|| OpcionPrincipio
Corrientazo }|--|| OpcionSopa

















@enduml